// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

<div
  aria-describedby="cardDescription"
  class="emotion-3 emotion-0 emotion-5 fp-Box fp-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Card.Content fp-Box"
    id="cardDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`composition hook should return with Card props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "type": "shadow",
      }
    }
  >
    <CardContent
      id=""
    />
  </Context.Provider>,
  "className": "css-gziovy css-1pwrqjj css-zp6o43 fp-Box fp-Card",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-2 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="cardDescription"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Card"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-5 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

<div
  aria-describedby="cardDescription"
  class="emotion-3 emotion-0 emotion-5 test fp-Box fp-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Card.Content fp-Box"
    id="cardDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Card.base should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-3 {
  background-color: red;
}

<div
  aria-describedby="cardDescription"
  class="emotion-3 emotion-0 emotion-5 fp-Box fp-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Card.Content fp-Box"
    id="cardDescription"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

<div
  aria-describedby="cardDescription"
  class="emotion-3 emotion-0 emotion-5 fp-Box fp-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Card.Content fp-Box"
    id="cardDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-5.emotion-5.emotion-5 {
  color: #3722ed;
}

.emotion-5 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

<div
  aria-describedby="cardDescription"
  class="emotion-3 emotion-0 emotion-5 fp-Box fp-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Card.Content fp-Box"
    id="cardDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Card.base should render correctly 1`] = `
.emotion-5 {
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-3 {
  background-color: red;
}

<div
  aria-describedby="cardDescription"
  class="emotion-3 emotion-0 emotion-5 fp-Box fp-Card"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Card.Content fp-Box"
    id="cardDescription"
  >
    hello world
  </div>
</div>
`;
